--- a/CSS/charlie.css
+++ b/CSS/charlie.css
@@ -1,5 +1,13 @@
 img {
-width: 100%;
-height: 100%;
-z-index: 900;
+	width: 100%;
+	height: 100%;
+	z-index: 900;
+}
+
+#WIN{
+	color:red;
+	font-size: 500px;
+	position: absolute;
+	visibility: hidden;
+	text-align:center;
 }
