--- a/CSS/charlie.css
+++ b/CSS/charlie.css
@@ -7,7 +7,7 @@ img {
 #WIN{
 	color:red;
 	font-size: 500px;
+	background-color: black;
 	position: absolute;
 	visibility: hidden;
-	text-align:center;
 }
