--- a/CSS/charlie.css
+++ b/CSS/charlie.css
@@ -6,7 +6,7 @@ img {
 
 #WIN{
 	color:red;
-	font-size: 500px;
+	font-size:3000%;
 	background-color: black;
 	position: absolute;
 	visibility: hidden;
